chandeliers-lus/tests/compile_fail/ui/causality/redef-var-iv.stderr
error: Attempt to redefine Variable `a`, when the context already defines it
 --> tests/compile_fail/ui/causality/redef-var-iv.rs:6:9
  |
6 |     let a = 0.0; tel
  |         ^^^^^^^
  |
note: Already defined here
 --> tests/compile_fail/ui/causality/redef-var-iv.rs:4:14
  |
4 |     node foo(a : int) returns ();
  |              ^
